# Hunt

./: README.md  io.github.swordpuffin.hunt.json  meson.build
data/: io.github.swordpuffin.hunt.desktop.in  io.github.swordpuffin.hunt.gschema.xml  io.github.swordpuffin.hunt.metainfo.xml.in  io.github.swordpuffin.hunt.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  fr.po  hunt.pot  meson.build  nl.po  ru.po
src/: end_dialog.ui  help_dialog.ui  hunt.gresource.xml  hunt.in  main.py  meson.build  resources.py  styles.css  window.cmb  window.py  window.ui  words.py
src/gtk/: help-overlay.ui
